make `yii-base-cli` run successfully
bacause `yii-core` depends `yii-view`, when only install `yii-base-cli`, `yii-view` is also required.

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/di": "^3.0@dev",
         "yiisoft/log": "^3.0@dev",
         "yiisoft/cache": "^3.0@dev",
-        "hiqdev/composer-config-plugin": "^1.0@dev"
+        "hiqdev/composer-config-plugin": "^1.0@dev",
+        "yiisoft/view": "^3.0@dev"
     },
     "extra": {
         "branch-alias": {
