--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<phpunit bootstrap="./tests/unit/bootstrap.php"
+<phpunit bootstrap="./tests/bootstrap.php"
 		colors="true"
 		verbose="true"
 		convertErrorsToExceptions="true"
@@ -8,7 +8,7 @@
 		stopOnFailure="false">
 		<testsuites>
 			<testsuite name="Project Test Suite">
-				<directory>./tests/unit</directory>
+				<directory>./tests</directory>
 			</testsuite>
 		</testsuites>
 </phpunit>
