--- a/composer.json
+++ b/composer.json
@@ -37,10 +37,10 @@
         }
     },
     "autoload": {
-        "psr-4": {"yii\\app\\": "src"}
+        "psr-4": {"yii\\cli\\app\\": "src"}
     },
     "autoload-dev": {
-        "psr-4": {"yii\\app\\tests\\": "tests"}
+        "psr-4": {"yii\\cli\\app\\tests\\": "tests"}
     },
     "config": {
         "process-timeout": 1800
